# RedisForAndroid

./: README.md  build.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/org/bybbs/redis/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/arm64-v8a/: dict-benchmark  redis-benchmark  redis-cli  redis-server
app/src/main/assets/armeabi-v7a/: dict-benchmark  redis-benchmark  redis-cli  redis-server
app/src/main/assets/x86/: dict-benchmark  redis-benchmark  redis-cli  redis-server
app/src/main/assets/x86_64/: dict-benchmark  redis-benchmark  redis-cli  redis-server
app/src/main/cpp/: native-lib.cpp  wait3.c  wait3.h
app/src/main/cpp/redis-4.0.9/: .gitignore
app/src/main/cpp/redis-4.0.9/src/: bio.c  config.h  server.h
app/src/main/java/org/bybbs/redis/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/org/bybbs/redis/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
